--- a/src/AdminPage.css
+++ b/src/AdminPage.css
@@ -8,10 +8,7 @@
     align-items: center;
     width: 20%;
 }
-.admin-options button{
-    width: 100px;
-    border: 5px groove #1C6EA4;
-}
+
 
 .admin-controls{
     width:100%;
@@ -23,7 +20,6 @@
     flex-flow:column wrap;
     justify-content: space-evenly;
     align-items:center;
-    border:2px solid red;
     height:500px;
 }
 
@@ -50,12 +46,10 @@
     
 }
 
-.controls{
-}
+/* .controls{
+} */
 
 .controls button{
-    border: 5px groove #1C6EA4;
-    padding:7px;
     margin-left:25px;
 }
 /*-----------------------!REGISTRATION---------------------------*/
@@ -68,6 +62,8 @@
     align-content:center;
     margin-left:5px;
     box-sizing: border-box;
+    height:100%;
+    width:100%;
 }
 
 .identification{
@@ -86,8 +82,10 @@
 
 .publication{
     display:inline-flex;
-
-    justify-content: center;
-    align-self:center;
+    width:300px;
+    height:100%;
+    flex-direction: column;
+    align-self: center;
+    padding:10px;
 }
 /*-----------------------!CATALOG---------------------------*/
