--- a/src/index.css
+++ b/src/index.css
@@ -108,6 +108,14 @@ option{
   width: 70%;
   height:100%;
 }
+
+.nameplate{
+  width:100%;
+  height:100%;
+  display: flex;
+}
+
+
 /*----------------!APP---------------------*/
 
 /*-----------------CARD-------------------*/
